--- a/.env
+++ b/.env
@@ -16,5 +16,5 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=
-###< symfony/framework-bundle ###
+APP_SECRET=secret
+DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
